--- a/src/index.scss
+++ b/src/index.scss
@@ -370,3 +370,51 @@
     margin: 10px;
   }
 }
+
+.error-message {
+    color: red;
+    font-size: 1em;
+    display: flex;
+    justify-content: center;
+}
+
+.loading-bars {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 120px;
+  height: 100vh;
+  margin: auto;
+}
+
+.loading-bars div {
+  width: 20px;
+  height: 50px;
+  background-color: #1975D0;
+  animation: bounce 1.2s infinite ease-in-out;
+}
+
+.loading-bars div:nth-child(1) {
+  animation-delay: -1.1s;
+}
+.loading-bars div:nth-child(2) {
+  animation-delay: -1.0s;
+}
+.loading-bars div:nth-child(3) {
+  animation-delay: -0.9s;
+}
+.loading-bars div:nth-child(4) {
+  animation-delay: -0.8s;
+}
+.loading-bars div:nth-child(5) {
+  animation-delay: -0.7s;
+}
+
+@keyframes bounce {
+  0%, 80%, 100% {
+    transform: scaleY(0.3);
+  }
+  40% {
+    transform: scaleY(1);
+  }
+}
