--- a/src/index.scss
+++ b/src/index.scss
@@ -200,7 +200,57 @@
       }
     }
 
+    &__images {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding-top: 5px;
 
+      &__img {
+        height: 22px;
+        width: 22px;
+        margin-right: 8px;
+        cursor: pointer;
+      }
+    }
+
+
+
+  }
+}
+
+@media (max-width: 500px) {
+
+  &__background {
+    height: 400px;
+  }
+
+  &__content {
+    flex-direction: column;
+    height: 400px;   
+    width: 70%;
+    padding-left: 3%;
+
+    &__data {
+    
+      &__title{
+        margin-bottom: 5px;
+      }
+
+      &__subtitle{
+        margin-bottom: 5px;
+      }
+
+    }
+  }
+
+  
+
+  &__img {
+    width: 80%;
+    height: 150px;
+    border-radius: 8px;
+    margin: 5px;
   }
 }
 }
@@ -276,6 +326,14 @@
         border-radius: 50%;
       }
     }
+  }
+}
+
+@media (max-width: 500px) {
+  .event-tickets {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
